Add more language, unzip file

--- a/nwt_hs/src/nwt_hs/res/layout/main.xml
+++ b/nwt_hs/src/nwt_hs/res/layout/main.xml
@@ -6,13 +6,14 @@
   ~ Vestibulum commodo. Ut rhoncus gravida arcu.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#0099cc"
-    tools:context=".main">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+
+</LinearLayout>
 
 
 
-</FrameLayout>
